# Aurora-Compass

./: .env.example  .gitignore  BRANDING.md  CLAUDE.md  CNAME  Cargo.toml  README-CUSTOM.md  TESTING.md  app.config.js  crates.js  help.html  index.html  package.json  rustfmt.toml  settings.html  src-files.js
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.claude/: settings.local.json
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml  test.yml
app_core/: all.html  index.html  sidebar-items.js
app_core/auth/: enum.AuthError.html  index.html  sidebar-items.js  struct.AuthService.html  struct.CreateAccountParams.html  struct.LoginParams.html  struct.LoginResult.html  type.Result.html
app_core/autocomplete/: constant.CACHE_EXPIRATION.html  constant.MAX_AUTOCOMPLETE_RESULTS.html  enum.AutocompleteError.html  enum.AutocompleteResult.html  index.html  sidebar-items.js  struct.ActorProfile.html  struct.ActorSearchResponse.html  struct.AutocompleteService.html  struct.CacheEntry.html  struct.HashtagSuggestion.html  type.Result.html
app_core/bookmarks/: constant.PAGE_SIZE.html  enum.BookmarkError.html  index.html  sidebar-items.js  struct.Bookmark.html  struct.BookmarkCache.html  struct.BookmarkService.html  struct.BookmarkSubject.html  struct.CreateBookmarkParams.html  struct.DeleteBookmarkParams.html  struct.GetBookmarksResponse.html  type.Result.html
app_core/branding/: constant.APP_NAME.html  constant.APP_NAME_SHORT.html  constant.APP_TAGLINE.html  constant.APP_VERSION.html  constant.LOGO_PATH.html  index.html  sidebar-items.js
app_core/editor/: constant.MAX_POST_LENGTH.html  enum.SuggestionType.html  index.html  sidebar-items.js  struct.AutocompleteSuggestion.html  struct.RichTextEditor.html
app_core/embeds/: enum.EmbedError.html  enum.EmbedType.html  enum.ExternalEmbed.html  (+9 more)
app_platform/: all.html  index.html
app_state/: all.html  index.html  sidebar-items.js
app_ui/: all.html  index.html  sidebar-items.js
atproto_client/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
crates/app-core/: Cargo.toml
crates/app-core/src/: auth.rs  autocomplete.rs  bookmarks.rs  branding.rs  editor.rs  embeds.rs  feeds.rs  interactions.rs  lib.rs  link_preview.rs  lists.rs  media.rs  messages.rs  notifications.rs  posts.rs  profiles.rs  search.rs  threads.rs
crates/app-platform/: Cargo.toml
crates/app-platform/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/app-state/: Cargo.toml
crates/app-state/src/: account_scope.rs  cache.rs  lib.rs  mutation.rs  query.rs  session.rs  sync.rs  unread.rs
crates/app-ui/: Cargo.toml
crates/app-ui/src/: components.rs  lib.rs  navigation.rs  screens.rs  theme.rs  tokens.rs  typography.rs
crates/atproto-client/: Cargo.toml
crates/atproto-client/src/: agent.rs  cid.rs  lexicon.rs  lib.rs  session.rs  test_utils.rs  types.rs  xrpc.rs
crates/atproto-client/src/lexicon/: cbor.rs  constraints.rs  formats.rs  mod.rs  parsing.rs  resolution.rs  schema.rs  types.rs  validation.rs
crates/atproto-client/src/session/: manager.rs  mod.rs
crates/atproto-client/tests/: xrpc_integration.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lang.rs  lib.rs  translator.rs
crates/media-processing/: Cargo.toml
crates/media-processing/src/: compression.rs  image.rs  lib.rs  video.rs
crates/moderation/: Cargo.toml
crates/moderation/src/: blocking.rs  filtering.rs  labels.rs  lib.rs  reporting.rs
crates/networking/: Cargo.toml
crates/networking/src/: client.rs  lib.rs  retry.rs
crates/storage/: Cargo.toml  test_atomic.json.backup.2  test_corruption.json.backup.3  test_migration.json.backup.1  test_persistence.json.backup.1  test_update.json.backup.2
crates/storage/src/: app_state.rs  cache.rs  database.rs  kv.rs  lib.rs  persistence.rs  preferences.rs  sync.rs
crates/storage/test_disk_cache.db/: db  snap.0000000000000127  snap.00000000000001BB  snap.00000000000002E5  snap.0000000000000411  snap.00000000000004A7  snap.000000000000053B  snap.00000000000005CF  snap.00000000000006FA  snap.000000000000078E  snap.0000000000000823  snap.0000000000000FB6  snap.00000000000010E2
crates/storage/test_tiered_cache.db/: db  snap.0000000000000126  snap.00000000000001B9  snap.00000000000002E1  snap.000000000000040B  snap.00000000000004A0  snap.0000000000000534  snap.00000000000005C7  snap.00000000000006EF  snap.0000000000000782  snap.0000000000000815  snap.0000000000000F95  snap.00000000000010BC
crates/storage/test_tiered_eviction.db/: db  snap.000000000000024A  snap.0000000000000479  snap.00000000000007FD  snap.0000000000000B69  snap.0000000000000D9D  snap.0000000000000F56  snap.0000000000001122  snap.0000000000001495  snap.00000000000016C3  snap.000000000000187C  snap.0000000000002FF5  snap.00000000000033E3
i18n/: all.html  index.html  sidebar-items.js
media_processing/: all.html  index.html  sidebar-items.js
moderation/: all.html  index.html  sidebar-items.js
networking/: all.html  index.html  sidebar-items.js
scripts/: README.md  build.bat  build.sh  check.bat  check.sh  format.bat  format.sh  install-hooks.bat  install-hooks.sh  lint.bat  lint.sh  test.bat  test.sh
search.index/: 007dd4a032ae.js  00a2c56b70ce.js  00ba09295e93.js  0158b1ffc9a9.js  0253346654dd.js  02b5262dd858.js  02be33649f48.js  02f933af9072.js  033affad08fc.js  039a0e38d902.js  03a479b7618a.js  041ff94f5001.js  0466a9e5cf80.js  0490368eb279.js  04a110c7a597.js  054927ce7285.js  054a75458f0c.js  057598ff89ab.js  059837b66fc8.js  05a92d20bc10.js  05c0f5e25ca1.js  0673537ec206.js  06cf8528389c.js  07107cf2be66.js  07192f7eb9bf.js  072f0f24e404.js  0769c7e5f205.js  076b8924c3d5.js  0784d824aead.js  079492b30c0e.js  079a4b55962e.js  07c37709882c.js  07c4cb0c1550.js  07cc756e4624.js  07ee13c50d41.js  08ce990f1695.js  0916f1169efa.js  0981b5887f54.js  09b205a278a4.js  0a1d31aea486.js  (+582 more)
src/: Splash.tsx
storage/: all.html  index.html  sidebar-items.js
tests/: multi_account_switching.rs  phase1_integration.rs
web/: index.html
(+1080 files in other folders)
