[package]
name = "app-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# State management
parking_lot = "0.12"

# Internal dependencies
storage = { path = "../storage" }
atproto-client = { path = "../atproto-client" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
