[package]
name = "atproto-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Internal workspace crates
storage = { path = "../storage" }

# AT Protocol specific
serde_ipld_dagcbor = "0.6"
cid = "0.11"
multihash-codetable = "0.1"
sha2 = "0.10"

# JWT handling
jsonwebtoken = "10.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unicode text segmentation
unicode-segmentation = "1.12"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
tempfile = "3"
