[package]
name = "i18n"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Internationalization
fluent = "0.17"
fluent-langneg = "0.14"
unic-langid = "0.9"

[dev-dependencies]
# None needed
