[package]
name = "moderation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Internal dependencies
atproto-client = { path = "../atproto-client" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
