[package]
name = "moderation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Internal dependencies
atproto-client = { path = "../atproto-client" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
