[package]
name = "networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
