[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Database (using default-features = false to avoid pulling in mysql/postgres drivers)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

# Key-value store
sled = { version = "0.34", features = ["compression"] }

# Migration checksums
md5 = "0.7"

# Cache
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
